unpackaged/main/default/objects/nbavs__UserSettings__c/nbavs__UserSettings__c.object-meta.xml
<CustomObject>
    <label>User Settings</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>