unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CountryCode__c</fullName>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>