unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__CountryCodeLabel__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CountryCodeLabel__c</fullName>
    <label>Country</label>
    <length>64</length>
    <type>Text</type>
</CustomField>