unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__ExternalCallerIdNumber__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ExternalCallerIdNumber__c</fullName>
    <label>External Caller Id Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>