unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__InternalCallerIdName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__InternalCallerIdName__c</fullName>
    <label>Internal Caller Id Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>