unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__InternalCallerIdNumber__c.field-meta.xml
<CustomField>
    <fullName>nbavs__InternalCallerIdNumber__c</fullName>
    <label>Internal Caller Id Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>