unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__PresentCallerId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PresentCallerId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Present External Caller Identity Number</label>
    <type>Checkbox</type>
</CustomField>