unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__TimeZone__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TimeZone__c</fullName>
    <label>Time Zone</label>
    <length>64</length>
    <type>Text</type>
</CustomField>