unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__TranscriptionLanguage__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TranscriptionLanguage__c</fullName>
    <label>Transcription Language</label>
    <length>32</length>
    <type>Text</type>
</CustomField>