unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <label>User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>User Settings</relationshipLabel>
    <relationshipName>User_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>