unpackaged/main/default/objects/nbavs__UserSettings__c/fields/nbavs__VoiceLabel__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VoiceLabel__c</fullName>
    <label>Voice</label>
    <length>64</length>
    <type>Text</type>
</CustomField>